[gd_scene load_steps=10 format=3 uid="uid://bfs8eok2qd7m"]

[ext_resource type="Script" uid="uid://do008lgoo8u40" path="res://Battle/Units/unit.gd" id="1_80pc5"]
[ext_resource type="PackedScene" uid="uid://ckouewo53hqe1" path="res://3dAssets/PlayerMesh.glb" id="2_jcjrx"]
[ext_resource type="Script" uid="uid://blouib3bbr5qw" path="res://Battle/Scripts/camera_rig.gd" id="3_5eii0"]
[ext_resource type="PackedScene" uid="uid://b53o4s3x3yc72" path="res://Battle/Weapons/gatling_gun.tscn" id="4_jcjrx"]
[ext_resource type="PackedScene" uid="uid://brkkuvyywqpxg" path="res://Battle/Weapons/melee.tscn" id="5_5eii0"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6t5aa"]
height = 1.74606

[sub_resource type="SphereShape3D" id="SphereShape3D_6t5aa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6t5aa"]
bg_color = Color(0.43134, 0.43134, 0.43134, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vgqql"]
bg_color = Color(0.368627, 0.694118, 0.129412, 1)

[node name="UnitRoot" type="Node3D"]
script = ExtResource("1_80pc5")

[node name="Unit" type="CharacterBody3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Unit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.982733, 0)
shape = SubResource("CapsuleShape3D_6t5aa")
debug_color = Color(0.302977, 0.607063, 0.459526, 0.42)

[node name="PlayerMesh" parent="Unit" instance=ExtResource("2_jcjrx")]
transform = Transform3D(-0.999722, 0, 0.0235598, 0, 1, 0, -0.0235598, 0, -0.999722, 0, 0, 0)

[node name="Skeleton3D" parent="Unit/PlayerMesh/Armature" index="0"]
bones/8/rotation = Quaternion(-0.707012, -0.0115523, -0.0115523, 0.707012)
bones/9/rotation = Quaternion(-2.07306e-08, 4.62458e-09, 0.0169768, 0.999856)
bones/11/rotation = Quaternion(-0.707107, 2.66925e-08, -2.66925e-08, 0.707107)

[node name="AnimationPlayer" parent="Unit/PlayerMesh" index="1"]
autoplay = "freehand_idle"

[node name="SpringArm3D" type="SpringArm3D" parent="Unit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.18475, 0)
shape = SubResource("SphereShape3D_6t5aa")
script = ExtResource("3_5eii0")

[node name="Camera3D" type="Camera3D" parent="Unit/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, -1.49012e-08, 0, 1.49012e-08, 1, 0, 0, 3.17094)

[node name="Weapons" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Gatling Gun" parent="Weapons" instance=ExtResource("4_jcjrx")]

[node name="Melee" parent="Weapons" instance=ExtResource("5_5eii0")]

[node name="MiniStatsWindow" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchor_top = 0.852
anchor_bottom = 0.852
offset_left = 1.0
offset_top = -0.0960083
offset_right = 41.0
offset_bottom = 39.904
grow_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="MiniStatsWindow"]
layout_mode = 0
offset_right = 274.0
offset_bottom = 95.0

[node name="MarginContainer" type="MarginContainer" parent="MiniStatsWindow/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MiniStatsWindow/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MiniStatsWindow/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MiniStatsWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Evasion:"

[node name="EvasionContainer" type="HBoxContainer" parent="MiniStatsWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MiniStatsWindow/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MiniStatsWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HPLabel" type="Label" parent="MiniStatsWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "HP:"

[node name="CTLabel" type="Label" parent="MiniStatsWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "CT:"

[node name="VBoxContainer2" type="VBoxContainer" parent="MiniStatsWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HPBar" type="ProgressBar" parent="MiniStatsWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 20)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_6t5aa")
theme_override_styles/fill = SubResource("StyleBoxFlat_vgqql")
value = 100.0

[node name="CTBar" type="ProgressBar" parent="MiniStatsWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 20)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_6t5aa")
theme_override_styles/fill = SubResource("StyleBoxFlat_vgqql")
value = 100.0

[node name="VBoxContainer3" type="VBoxContainer" parent="MiniStatsWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HPNumeric" type="Label" parent="MiniStatsWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "50/50"

[node name="CTNumeric" type="Label" parent="MiniStatsWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "50/50"

[editable path="Unit/PlayerMesh"]
